stacks/staging/networking/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http2https
  namespace: ingress-internal
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway
      sectionName: http2
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
